Fixed ugly spacing issue due to audio plugin

--- a/system/shell/css/_system.gaea.scss
+++ b/system/shell/css/_system.gaea.scss
@@ -22,6 +22,10 @@ body {
 
 .hikari-content, .hikari-content-inner { position: relative !important; } //
 
+.playSound-embed, .playSound-audio {
+	position: absolute;
+}
+
 ///////////////////////////////////////////////////////////////////////////////////////////////////////
 
 .button, button {
